# src/middleware/userValidators.js
@@ -1,53 +1,49 @@
-// import { handleValidationErrors } from './handleValidationErrors.js';
-// import { body } from 'express-validator';
+import { handleValidationErrors } from './handleValidationErrors.js';
+import { body } from 'express-validator';
 
-// export const validateSignUp = [
-//   body('name')
-//     .exists({ values: 'falsy' })
-//     .withMessage('Name is required'),
+export const validateSignUp = [
+  body('email')
+    .trim()
+    .exists({ values: 'falsy' })
+    .withMessage('Email is required')
+    .bail()
+    .isEmail()
+    .withMessage('Email is not valid')
+    .bail()
+    .normalizeEmail(),
 
-//   body('email')
-//     .trim()
-//     .exists({ values: 'falsy' })
-//     .withMessage('Email is required')
-//     .bail()
-//     .isEmail()
-//     .withMessage('Email is not valid')
-//     .bail()
-//     .normalizeEmail(),
+  body('address')
+    .exists({ values: 'falsy' })
+    .withMessage('Shipping Address is required'),
 
-//   body('shippingAddress')
-//     .exists({ values: 'falsy' })
-//     .withMessage('Shipping Address is required'),
+  body('password')
+    .exists({ values: 'falsy' })
+    .withMessage('Password is required')
+    .bail()
+    .isLength({ min: 8, max: 64 })
+    .withMessage(
+      'Password must contain at least 8 characters and at most 64 characters',
+    ),
 
-//   body('password')
-//     .exists({ values: 'falsy' })
-//     .withMessage('Password is required')
-//     .bail()
-//     .isLength({ min: 8, max: 64 })
-//     .withMessage(
-//       'Password must contain at least 8 characters and at most 64 characters',
-//     ),
+  body('role')
+    .optional()
+    .isIn(['CLIENT', 'EMPLOYEE', 'ADMIN'])
+    .withMessage('Role must be either CLIENT, EMPLOYEE or ADMIN'),
 
-//   body('role')
-//     .optional()
-//     .isIn(['CLIENT', 'EMPLOYEE', 'ADMIN'])
-//     .withMessage('Role must be either CLIENT, EMPLOYEE or ADMIN'),
+  handleValidationErrors,
+];
 
-//   handleValidationErrors,
-// ];
+export const validateLogIn = [
+  body('email')
+    .trim()
+    .exists({ values: 'falsy' })
+    .withMessage('Email is required')
+    .bail()
+    .normalizeEmail(),
 
-// export const validateLogIn = [
-//   body('email')
-//     .trim()
-//     .exists({ values: 'falsy' })
-//     .withMessage('Email is required')
-//     .bail()
-//     .normalizeEmail(),
+  body('password')
+    .exists({ values: 'falsy' })
+    .withMessage('Password is required'),
 
-//   body('password')
-//     .exists({ values: 'falsy' })
-//     .withMessage('Password is required'),
-
-//   handleValidationErrors,
-// ];
+  handleValidationErrors,
+];
